objects/Case_Load_Weekly_Snap__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Records__c</fullName>
        <label># of Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Load Weekly Snap</label>
    <listViews>
        <fullName>DS_3G_to_LTE_Upgrade_Case_Load_Weekly_Snap</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - 3G to LTE Upgrade</label>
        <queue>DS_3G_to_LTE_Upgrade</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Alt_Add_Devices_Case_Load_Weekly_Snap</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Alt/Add Devices</label>
        <queue>DS_Alt_Add_Devices</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_App_Support_Case_Load_Weekly_Snap</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - App Support</label>
        <queue>DS_App_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Break_In_Case_Load_Weekly_Snap</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Break In</label>
        <queue>DS_Break_In</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Camera_Doorbell_Issue_Case_Load_Weekly_Snap</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Camera (Doorbell) Issue</label>
        <queue>DS_Camera_Doorbell_Issue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Camera_Issue_Case_Load_Weekly_Snap</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Camera Issue</label>
        <queue>DS_Camera_Issue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Code_Change_Case_Load_Weekly_Snap</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Code Change</label>
        <queue>DS_Code_Change</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Communication_Failure_Case_Load_Weekly_Snap</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Communication Failure</label>
        <queue>DS_Communication_Failure</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Emails_Case_Load_Weekly_Snap</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Emails</label>
        <queue>DS_Emails</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_False_Alarms_Case_Load_Weekly_Snap</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - False Alarms</label>
        <queue>DS_False_Alarms</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Followup_on_Scheduling_Case_Load_Weekly_Snap</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Follow-Up on Scheduling</label>
        <queue>DS_Followup_on_Scheduling</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Install_Warranty_Case_Load_Weekly_Snap</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Install Warranty</label>
        <queue>DS_Install_Warranty</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Low_Battery_System_Case_Load_Weekly_Snap</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Low Battery (System)</label>
        <queue>DS_Low_Battery_System</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Low_Battery_Zone_Case_Load_Weekly_Snap</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Low Battery (Zone)</label>
        <queue>DS_Low_Battery_Zone</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_No_Tech_Case_Load_Weekly_Snap</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - No Tech</label>
        <queue>DS_No_Tech</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CLWS {0}</displayFormat>
        <label>Case Load Weekly Snap Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Load Weekly Snaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>